--- a/productos.html
+++ b/productos.html
@@ -12,9 +12,24 @@
     <header id="header-container" class="texto-principal"></header>
     <nav id="navbar-container" class="texto-principal"></nav>
     
+    <main>
+        <section class="text-center fondo-catalogo">
+            <div class="row py-lg-5 fondo-texto-catalogo">
+                <div class="col-lg-6 col-md-8 mx-auto ">
+                    <h1 class="texto-principal">Catálogo de productos</h1>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 p-5" id="catalogo"></div>
+        </section>
+    </main>
+
     <footer id="footer-container"></footer>
     
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/productos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
