--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda gamer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -15,6 +16,7 @@
     <nav id="navbar-container" class="texto-principal"></nav>
 
     <main>
+        <!-- Titulo de la pagina -->
         <section class="text-center fondo-catalogo">
             <div class="row py-lg-5 fondo-texto-catalogo">
                 <div class="col-lg-6 col-md-8 mx-auto ">
@@ -23,8 +25,17 @@
             </div>
         </section>
 
+        <!-- Buscador -->
+        <section class="container my-4">
+            <div class="input-group">
+                <input type="text" id="buscador" class="form-control" placeholder="¿Qué producto quieres?">
+                <button id="btnBuscarProducto" class="btn">Buscar producto</button>
+            </div>
+        </section>
+
+        <!-- Catalogo -->
         <section>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 p-5" id="catalogo"></div>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 px-5 pb-5" id="catalogo"></div>
         </section>
     </main>
 
@@ -32,7 +43,9 @@
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/productos.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
