--- a/registro.html
+++ b/registro.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda gamer</title>
+    <title>Registro - Level-Up Gamer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="registro-pagina">
 
     <header id="header-container" class="texto-principal"></header>
     <nav id="navbar-container" class="texto-principal"></nav>
@@ -91,8 +91,8 @@
                             <button type="submit" class="btn btn-registrarse w-100 mt-3">Registrarse</button>
                         </form>
 
-                        <p class="mt-3 text-center color-acento-azul">
-                            ¿Ya tienes cuenta? <a href="login.html" class="color-acento-azul">Inicia sesión</a>
+                        <p class="mt-3 text-center">
+                            ¿Ya tienes cuenta? <a href="#" class="color-acento-azul">Inicia sesión</a>
                         </p>
                     </div>
                 </div>
