--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </main>
 
     <footer id="footer-container"></footer>
-
+    <script src="assets/js/utils.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
