--- a/productos.html
+++ b/productos.html
@@ -53,7 +53,7 @@
     </main>
 
     <footer id="footer-container"></footer>
-
+    <script src="assets/js/utils.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/productos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
